--- a/src/app/asignacion/asignacion.component.css
+++ b/src/app/asignacion/asignacion.component.css
@@ -1,11 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css?family=Abel');
 *{
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
+  font-family: Abel, Arial, Verdana, sans-serif;
+  font-size: 16px;
 }
 body{
-  width: 100vw;
+  width: 100%;
   padding-top: 30px;
-  height: 90vh;
-  background-color: antiquewhite;
+  height: 100%;
+  background-color: #f1f0f6;
 }
 .ti{
 text-align: center;
@@ -108,9 +112,9 @@ tr.example-element-row:not(.example-expanded-row):active {
 
 .group-item{
   display: flex;
-  flex-wrap: wrap;
+  margin-top: 15px;
   justify-content: flex-start;
-  flex-direction: row;
+  flex-direction: column;
 
 }
 .item-info{
@@ -118,14 +122,19 @@ tr.example-element-row:not(.example-expanded-row):active {
   margin-right: 25px;
   margin-bottom: 10px;
   margin-top: 10px;
-  width: 30%;
-  flex-direction: column;
+  width: 100%;
+  flex-direction: row;
   
-color: #c5c5c5;
+color: black;
 font-weight: bold;
 }
 .item-info label{
   font-size: 15px;
+  margin-left: 15px;
+  width: 30%;
+}
+.item-info input{
+  width: 50%;
 }
 
 .detalleobse{
@@ -137,6 +146,8 @@ font-weight: bold;
 
 .item-info-lg{
   width: 100%;
+  display: flex;
+  flex-direction: column;
  
 }
 
@@ -159,7 +170,7 @@ label.linea {
   z-index: 1;
 }
 label.linea:before {
-  border-top: 2px solid #009688;
+  border-top: 2px solid #458fcd;
   content: "";
   margin: 0 auto;
   position: absolute;
@@ -172,12 +183,95 @@ label.linea:before {
 }
 label.linea span {
 
-  background: #fff;
+  background: black;
   padding: 0 15px;
 }
 
 
+
+.p-datatable .p-datatable-header{
+  background: #01a89e !important;
+}
 .detalle2{
   display: flex;
     flex-direction: row;
+    color: black;
+}
+
+.card{
+  width: 90%;
+  margin:0 auto;
+  box-shadow: 1px 8px 8px 0px gray;
+}
+
+.p-datatable .p-datatable-tbody > tr > td{
+  padding: 0.1rem 0.857rem !important;
+}
+
+.hov{
+  --c: #a4ccff;
+  font-size: 20px;
+  display: flex;
+  width: 180px;
+  height: 180px;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  background-color: white;
+  color: #a4ccff;
+  border-radius: 10px;
+  border: 0.3em solid var(--c);
+  font-weight: bold;
+  text-transform: uppercase;
+  z-index: 1;
+  position: relative;
+}
+.hov img{
+    width: 80px;
+    height: 80px;
+    margin-top: 20px;
+    margin-bottom:20px;
+    transition: 0.5s;
+}
+
+.hov:hover{
+ 
+  background-color: white;
+  color: white;
+  border-color: black;
+}
+
+
+.hov span {
+  position: absolute;
+  width: 40%;
+  height: 100%;
+  background-color: var(--c);
+  transform: translateY(150%);
+  border-radius: 50%;
+  left: calc((var(--n) - 1.5) * 25%);
+  transition: 0.5s;
+  transition-delay: calc((var(--n) - 1) * 0.1s);
+  z-index: -1;
+}
+
+
+.hov:hover span {
+  transform: translateY(0) scale(2);
+}
+
+.hov span:nth-child(1) {
+  --n: 1;
+}
+
+.hov span:nth-child(2) {
+  --n: 2;
+}
+
+.hov span:nth-child(3) {
+  --n: 3;
+}
+
+.hov span:nth-child(4) {
+  --n: 4;
 }
