--- a/src/app/navbar/nav/nav.component.css
+++ b/src/app/navbar/nav/nav.component.css
@@ -8,109 +8,34 @@
   }
 
 #user{
-    color: white;
-    margin: 5px 20px 0 0;
+    color: black;
+    margin-left: 15px;
+    text-transform: capitalize;
+    
+      margin-bottom: 7px;
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    font-weight: bold;
+ 
 }
 #img{
     width: 40%;
     height: 40%;
 }
-.menu-p{
-    position: absolute;
-    left: 10px;
-    top: 15px;
-    cursor: auto;
-    color: white;
-    font-size: 20px;
-    font-weight: 900;
-}
-.navbar{
-    height: 10vh;
-    
-}
-.btn-user{
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
- 
-    align-items: center;
-    margin-right: 10px;
-}
+
+
 body{
-    width: 100vw;
+    width: calc(100% - 70px);
     overflow-x: hidden;
-    height: 90vh;
+    height: 91vh;
+    margin-left: 70px;
 
-}
-.btn-menu label span{
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 10px;
-    color: #fff;
-    
-    font-size: 30px;
-    cursor: pointer;
 }
 
 
-#btn-menu{
-    display: none;
-}
-.container-menu{
-    position: absolute;
-    background: rgba(0,0,0,0.5);
-    width: 100%;
-    height: 100vh;
-    z-index: 3;
-    top: 0;left: 0;
-    transition: all 500ms ease;
-    opacity: 0;
-    visibility: hidden;
-}
-/* #btn-menu:checked ~ .container-menu{
-    opacity: 1;
-    visibility: visible;
-}
-#btn-menu:checked ~ .cont-menu{
-   
-   left: 0;
-} */
 
-.cont-menu{
-    position: absolute;
-    width: 100%;
-    max-width: 250px;
-    background:#11111d ;
-    height: 100vh;
-    z-index: 4;
-    transition: all 500ms ease;
-    top: 0;
-    left: -250px;
-}
-.cont-menu-title{
-    width: 100%;
 
-      display: flex;
-      justify-content: flex-start;
-      padding-left: 20px;
-      align-items: center;
-    background-color:   #363443 ;
-    height: 10vh;
-     color: white;
-}
-.cont-menu-title label{
-    cursor: pointer;
-    margin-left: 100px;
-    font-size: 20px;
-
-}
-.cont-menu-title h3{
-    
-    font-weight: 700;
-    color: #01a89e  ;
-
-}
 
 .cont-menu-nav{
     width: 100%;
@@ -122,15 +47,7 @@ body{
     height: 90vh;
 }
 
-.close-menu{
-    position: absolute;
-    right: 5px;
-    top: 15px;
-    width: 100%;
-    color: #fff;
-    cursor: pointer;
-    font-size: 18px;
-}
+
 .nava{
    
    
@@ -143,7 +60,7 @@ body{
     align-content: center;
     width: 100%;
     padding: 12px;
-    transition: 500ms ease;
+    transition: 300ms ease;
    
 
 }
@@ -158,3 +75,53 @@ body{
     
     color: white;
    }
+.nava:hover a  mat-icon{
+    background-color: turquoise;
+}
+.leftnav{
+    display: flex;
+    margin-right: 15px;
+    align-items: center;
+}
+
+.navdiv{
+    width:calc(100% - 70px);
+    margin-left: 70px;
+    height: 64px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    position: relative;
+    box-shadow :  0 1px 10px 0 rgb(182 183 195 / 50%) ;
+    background-color: white;
+}
+   .sidemenu{
+    background-color: #f2f2f7;
+    width: 270px;
+    height:100%;
+    position: fixed;
+    z-index: 999;
+   left: -200px;
+   transition: 0.3s;
+    box-shadow: 0 2px 10px 0 rgb(0 0 0 / 30%);
+   }
+   .header_side{
+       width: 100%;
+       height: 9%;
+       background-image: linear-gradient(to right, #136a8a, #267871);
+       display: flex;
+       justify-content: flex-end;
+       align-items: center;
+   }
+   .header_side label{
+       color: white;
+       font-weight: bold;
+       margin-left: 15px;
+       font-size: 18px;
+   }
+
+   .sidemenu:hover{
+        left: 0;
+   }
+
+   
