--- a/src/app/pages/Perfil/datos-user/datos-user.component.css
+++ b/src/app/pages/Perfil/datos-user/datos-user.component.css
@@ -8,20 +8,20 @@
   body{
       width: 100%;
       height: 100%;
-      background-color:white;
+      background-color:#f1f0f6;
       padding-top: 5vh;
 
 
   }
   .imgback{
-    width: 10.2%;
-    height: 20%;
-    top: 21vh;
+    width: 13.5vw;
+    height: 29.5vh;
+    top: 14vh;
     opacity: 0;
-    left: 15.2vw;
+    left: 12vw;
     display: flex;
     margin: 20px auto 0px auto;
-  
+  border-radius: 50%;
     transition: ease;
     position: absolute;
     z-index: 3;
@@ -31,32 +31,42 @@
   .imgback:hover{
       opacity: 1;
       background: url('upload.gif') rgba(117, 117, 116, 0.4);
-      background-size: 60% 60%;
+      background-size: cover;
       background-position:50% 50%;
       background-repeat: no-repeat;
   }
 .circular-img{
-    width: 40%;
-    height: 53%;
+    width: 17%;
+    height: 30vh;
     display: flex;
-    margin: 20px auto 0px auto;
+    margin: 20px auto 0px 30px;
+    
   
  
 }
-
-.circular-img img{
- 
-    width: 100%;
+.profilename{
+    width: 80%;
     height: 100%;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+
+}
+.fotoclass{
+    width: 100%;
+   display: flex;
    
+    height: 100%;
+}
+.circular-img img{
+  border-radius: 50%;
+    width: 98%;
+    height: 100%;
+    border: 3px solid white ;
     
 }
 
-.fotoclass{
-    width: 100%;
-   
-    height: 47%;
-}
+
 .schooldata{
     display: flex;
     flex-direction: column;
@@ -119,9 +129,7 @@ ul{
         margin-bottom: 10px;
  }
 
- .datapersonal mat-form-field{
-     
- }
+
 
  mat-icon{
      color: #fab044;;
@@ -133,82 +141,34 @@ ul{
     margin: 0 auto;
     
     display: flex;
+    flex-direction: column;
     box-shadow: 2px 2px 5px #666;
     background-color: white;
 
 }
 
  .cardrigth{
-     width: 30%;
-     height: 100%;
-     background: #363443
+     width: 100%;
+     height: 30%;
+     background: #363443;
+    
  }
 .cardleft{
-    width: 70%;
+    width: 100%;
    
-    padding-left: 30px;
+    padding-left: 10px;
     padding-top: 30px;
-    padding-right: 30px;
-    height: 100%;
+    padding-right: 10px;
+    height: 70%;
 }
-.cardrigth h3{
-    margin: 20px auto 0px auto;
-    font-size: 20px;
-    text-align: center;
-    font-weight: bold;
+h3{
     color: white;
-}
-
-h4 {
-    overflow: hidden;
-    text-align: start;
-    color: #363443;
     font-weight: bold;
+    margin: 25px 0px 0px 20px;
 }
 
-.academic:before,
-.academic:after {
-    background-color: rgba(255, 255, 255, 1);
-    content: "";
 
-    
-    display: inline-block;
-    height: 2px;
-    border-radius: 50%;
-    position: relative;
-    vertical-align: middle;
-    width: 50%;
-}
-.academic:before {
-    right: 0.5em;
-    margin-left: -50%;
-}
-.academic:after {
-    left: 0.5em;
-    margin-right: -50%;
-}
 
-h4:before,
-h4:after {
-    background-color: #fab044;
-    content: "";
-
-    
-    display: inline-block;
-    height: 2px;
-    border-radius: 50%;
-    position: relative;
-    vertical-align: middle;
-    width: 65%;
-}
-h4:before {
-    right: 0.5em;
-    margin-left: -50%;
-}
-h4:after {
-    left: 0.5em;
-    margin-right: -50%;
-}
 
 input{
     border:none;
@@ -278,13 +238,7 @@ fieldset{
       justify-content: flex-start;
 
   }
-  .savebtns2{
-      width: 100%;
-      display: flex;
-     
-      margin-top: 20px;
-      justify-content: center;
-  }
+  
   .editbtn{
     background-color: #363443;
     width: 7vw;
@@ -307,7 +261,7 @@ fieldset{
     width: 7vw;
     border-radius: 10px;
     height: 30px;
-    margin-left: 20%;
+   
     border: none;
     display: flex;
     align-items: center;
@@ -326,4 +280,9 @@ fieldset{
     justify-content: center;
     margin-left: 10px;
     color: white;
+}
+
+
+.p-tabview .p-tabview-nav {
+    margin-left: 50px !important;
 }
