--- a/src/app/pages/registrar_atencion/registrar-atencion/registrar-atencion.component.css
+++ b/src/app/pages/registrar_atencion/registrar-atencion/registrar-atencion.component.css
@@ -1,14 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Abel');
 * {
-   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+   font-family: Abel, Arial, Verdana, sans-serif;
   }
 
   body{
       width: 100%;
       height: 100%;
-      background-color: white;
+   
+      background-color: #f1f0f6;
       padding-top: 2vh;
       font-family: 'Dosis', sans-serif;
-     
+      padding-left: 20px;
+      padding-right: 20px;
 
   }
   .body-content{
@@ -18,9 +21,10 @@
       
   }
   .card-body{
-    width: 98vw;
+    width: 100%;
     height: 84vh;
-    margin: 0 auto;
+    box-shadow: 1px 5px 5px 0px gray;
+  margin: 0 auto;
     padding-top: 10px;
     
     
@@ -29,19 +33,11 @@
 
 }
 
-.list-cards{
-    height: 100%;
-    width: 60%;
-    overflow-y: auto;
-    box-shadow: 0px 0px 10px 0px #666 inset;
-    display: flex;
-    background-color: white;
-    flex-direction: row;
-    flex-wrap: wrap;
-}
+
 .listproximasS{
     height: 100%;
     width: 40%;
+    margin-top: 25px;
     padding: 0px 0px 0px 15px;
     background-color: white;
 }
@@ -85,132 +81,103 @@
     margin: 0px 0px 0px 15px;
 }
 .card{
+    width: 690px;
     height: 30vh;
-    font-family: 'Dosis', sans-serif;
-   
-   box-shadow: 1px 8px 8px 0px rgba(0,0,0,0.2);
-    margin: 20px auto 10px auto;
+    background-color: #fff;
+    background: linear-gradient(#f8f8f8, #fff);
+    box-shadow: 0 8px 16px -8px rgba(0,0,0,0.4);
+    border-radius: 6px;
+    overflow: hidden;
+    position: relative;
+    margin: 1.5rem;
     display: flex;
     flex-direction: row;
-
-    width: 94%;
 }
 
+.card:hover .cardleft {
+    width: 690px;
+    border-radius: 0 5px 5px 0;
+  }
+  .card:hover .cardleftM {
+    width: 690px;
+    border-radius: 0 5px 5px 0;
+  }
 .cardleft{
-  width: 30%;
- 
-  height: 100%;
+  width: 200px;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  flex-direction: row;
+  position: absolute;
+  overflow: hidden;
+  z-index: 2;
+  height: 100%;
+  transition: width 0.4s;
+  
+  background: linear-gradient(#92bCa6, #A2CCB6);
+
 }
-.img{
-    width: 60%;
-    box-shadow: 1px 6px 6px 0px rgba(0,0,0,0.2);
-    border-radius: 50%;
-    height: 60%;
+.cardleftM{
+    width: 200px;
+    display: flex;
+    flex-direction: row;
+    position: absolute;
+    overflow: hidden;
+    z-index: 2;
+    height: 100%;
+    transition: width 0.4s;
+    
+    background: linear-gradient(#dE685E, #EE786E);
 }
+
 .cardrigth{
     
     height: 100%;
-    background-color: #01a89e ;
+    
+    color: black;
+    background-color: white ;
+    background: linear-gradient(#f8f8f8, #fff);;
     display: flex;
     flex-direction: column;
-   
+    left: 200px;
     justify-content: space-between;
     align-items: center;    
-    width: 70%;
+    width: 490px;
+    position: absolute;
+    z-index: 1;
 }
-.cardrigth h5{
-    text-transform: capitalize;
-    margin-top: 10px;
-    margin-bottom: 0;
-    font-weight: bold;
-    color: white;
-}
-.info{
-    width: 100%;
-}
-.descripciondiv{
-    
-    width: 100%;
-    padding: 5px 20px 5px 20px;
-    color: white;
-    
-    height: 10vh ;
-}
-.descripciondiv p{
-    max-height: 10vh;
-    margin-bottom: 20px;
-    overflow: hidden;
-    margin: 0;
-    text-overflow: ellipsis;
-    line-height: 21px;
-}
-.infopaciente{
-    margin-top: 5px;
-  width: 100%;
-    height: 5vh;
-    display: flex;
-    flex-direction: row;
-    
-}
-.pacdetail{
+
+.left1{
+width: 200px;
+
+position: relative;
+padding-top: 10px;
+float: left;
   display: flex;
   align-items: center;
-  width: 33.3%;
-  justify-content: center;
-  flex-direction: row;
-  color: white;
-}
-.pacdetail mat-icon{
-    color: #f7d063;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    margin-right: 5px;
-}
-.pacdetail p{
-    margin: 0;
-    
-}
+  flex-direction: column;
 
+height: 100%;
 
-
-
-
-.botones{
-    display: flex;
-    width: 100%;
-    height: 35px;
-    margin: 0;
 }
-.botones button{
-    width: 50%;
-      height: 100%;    
-}
-.registerbtn{
-     background-color: #fab044;
-     font-weight: bold;
-    color: white;
-    border: 0;
-}
-.cancelbtn{
-    font-weight: bold;
-color: black;
-border: 0;
-background-color: rgb(219, 219, 219);
-}
+.left2{
+float: left;
+ position: absolute;
+ border-left: 3px solid rgba(0,0,0,0.3);
+width: 470px;
+height: 100%;
+left: 218px;
+display: flex;
+flex-direction: column;
+justify-content: space-between;
 
-
-.icontool1{
-    margin-left: 55%;
-    color: white;
 }
-.icontool{
-    margin-left: 5%;
-    color: white;
+.img{
+    width: 130px;
+    box-shadow: 1px 6px 6px 0px rgba(0,0,0,0.2);
+    border-radius: 50%;
+    border: 5px solid white;
+    height: 130px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -221,21 +188,14 @@ background-color: rgb(219, 219, 219);
 
 
 
-.content{
-  margin: 10px 0px 10px 0px;
-    width: 100%;
-    height: 100px;
-  
-}
-.text{
-    
-   height: 80px;
-   width: 260px;
-    overflow-y: auto;
-   
-    
-    text-overflow: ellipsis;
-}
+
+
+
+
+
+
+
+
 
 
 .modal-header{
@@ -406,3 +366,23 @@ mat-form-field{
 .especial{
     width: 60%;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
