--- a/src/app/reportes/reportes/reportes.component.html
+++ b/src/app/reportes/reportes/reportes.component.html
@@ -6,12 +6,12 @@
 <body>
 
 
-    <div class="container">
-        <h4 style="margin-bottom: 40px;margin-top: 30px;"><img src="https://cdn-icons-png.flaticon.com/512/1055/1055644.png">
+    <div class="container mat-elevation-z8" >
+        <h4 style="margin-bottom: 40px;"><img src="https://cdn-icons-png.flaticon.com/512/1055/1055644.png">
             Personal de Ayuda Activo</h4>
 
 
-        <div class="mat-elevation-z8">
+        <div >
             <div class="search">
                 <mat-form-field class="buscador" appearance="standard">
                     <mat-label class="label"><mat-icon>search</mat-icon> Buscar
@@ -31,7 +31,7 @@
             </div>
 
 
-            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" >
                 <!-- Position Column -->
                 <ng-container matColumnDef="nro">
                     <th mat-header-cell *matHeaderCellDef> No. </th>
