--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-
+@import '../node_modules/primeng/resources/themes/rhea/theme.css';
+@import '../node_modules/primeicons/primeicons.css';
+@import '../node_modules/primeng/resources/primeng.min.css';
 @import 'material-icons/iconfont/material-icons.css';
 
 html, body { height: 100%; }
