--- a/src/app/reportes/reportes/reportes.component.html
+++ b/src/app/reportes/reportes/reportes.component.html
@@ -14,8 +14,7 @@
         <div >
             <div class="search">
                 <mat-form-field class="buscador" appearance="standard">
-                    <mat-label class="label"><mat-icon>search</mat-icon> Buscar
-                        por ...</mat-label>
+                    <mat-label class="label"><mat-icon>search</mat-icon> Buscar ....</mat-label>
                     <input matInput (keyup)="applyFilter($event)" #input>
                 </mat-form-field>
                 <button type="button" data-target="#exampleModal" data-toggle="modal"   (click)="cargartodas()" class="btn btn-info" style="height: 40px;margin-top: 19px;"><img src="assets/estadistica.png" alt="">Todos</button>
