--- a/src/app/pages/Perfil/datos-user/datos-user.component.css
+++ b/src/app/pages/Perfil/datos-user/datos-user.component.css
@@ -283,6 +283,11 @@ fieldset{
 }
 
 
-.p-tabview .p-tabview-nav {
-    margin-left: 50px !important;
+
+
+
+.p-tabview-nav {
+
+    margin-left: 20vw !important;
+   
 }
