--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     color: white;
   }
  
+  .p-tabview-nav {
+  
+    margin-left: 20vw !important;
+    
+}
