--- a/src/styles.css
+++ b/src/styles.css
@@ -23,10 +23,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     margin-left: 20vw !important;
     
 }
-
 .p-dialog-header {
- background-color: #458fcd;
+  background-color: #458fcd !important;
 }
+
+
 .p-datatable-header {
-  background: #01a89e;
+  background: #01a89e !important;
 }
